# rusticles

./: README.md
cn-rust-day-workshop/tcp-mailbox/: Cargo.toml
cn-rust-day-workshop/tcp-mailbox/src/: main.rs
hello-rust/: Cargo.toml
rust-cli-book/: README.md
rust-cli-book/grrs/: Cargo.toml
rust-cli-book/grrs/src/: lib.rs  main.rs
rust-cli-book/grrs/tests/: cli.rs
text-script-exp/: Cargo.toml  README.md  the-script.awk  the-script.sh
text-script-exp/src/: main.rs
text-script-exp/tests/: apptest.rs
text-script-exp/tests/resources/: prometheus.resource-capacity.old-new-comparison.txt  prometheus.resource-capacity.util.txt
the-book-excercises/: README.md
the-book-excercises/adder/: Cargo.toml
the-book-excercises/adder/src/: lib.rs
the-book-excercises/adder/tests/common/: mod.rs
the-book-excercises/guessing-game/: Cargo.toml
the-book-excercises/guessing-game/src/: main.rs
the-book-excercises/minigrep/: Cargo.toml
the-book-excercises/minigrep/src/: lib.rs  main.rs
the-book-excercises/restaurant/: Cargo.toml
the-book-excercises/restaurant/src/: lib.rs
