[package]
name = "grrs"
version = "0.0.0"
authors = ["mig4 <42650719@auril.club>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
